src/assets/css/style.css
/* ... */
.portfolio-popup .pp-img {
  max-width: 100%;
  width: auto;
  height: auto;
  padding: 10px;
  border-radius: 5px;
  display: block;
  margin: 0 auto;
}

.portfolio-popup .pp-main-integrated {
  padding: 10px 0 20px;
  width: 100%;
  margin-top: 10px;
  border-top: 1px solid var(--bg-black-100);
  text-align: center;
}

.portfolio-popup .pp-img-container {
  position: relative;
  width: 100%;
  padding-top: 10px;
}

.portfolio-popup .pp-nav-controls {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 25px;
  gap: 30px;
}

.portfolio-popup .pp-prev,
.portfolio-popup .pp-next {
  height: 40px;
  width: 40px;
  text-align: center;
  font-size: 20px;
  cursor: pointer;
  color: var(--text-black-900);
  transition: all 0.3s ease;
  background-color: var(--bg-black-50);
  border-radius: 50%;
  box-shadow: var(--outer-shadow);
  display: flex;
  align-items: center;
  justify-content: center;
}

.portfolio-popup .pp-prev i {
  transform: rotate(180deg);
}

.portfolio-popup .pp-counter {
  font-size: 16px;
  color: var(--text-black-600);
  font-weight: 500;
}

.portfolio-popup .pp-close-btn {
  position: absolute;
  right: 15px;
  top: 15px;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  text-align: center;
  line-height: 35px;
  font-size: 35px;
  color: var(--text-black-600);
  cursor: pointer;
  z-index: 10;
  transition: all 0.3s ease;
}

.portfolio-popup .pp-project-details-btn {
  display: inline-block;
  border-radius: 30px;
  font-size: 16px;
  font-weight: 500;
  color: var(--skin-color);
  cursor: pointer;
  padding: 0 25px;
  height: 40px;
  line-height: 40px;
  transition: all 0.3s ease;
  margin: 15px auto 20px;
}

.portfolio-popup .pp-project-details-btn i {
  margin-left: 4px;
}

/* ================ 
SECCIÓN DE TESTIMONIO
================ */
.testimonial-section {
  padding: 80px 0 80px;
  min-height: 100vh;
}

.testimonial-section .testi-box {
  width: 100%;
  max-width: 600px;
  margin: auto;
  padding: 0 15px;
}

.testimonial-section .testi-slider {
  border-radius: 5px;
  overflow: hidden;
}

.testimonial-section .testi-slider-container {
  display: flex;
  transition: margin 1s ease;
  align-items: center;
}

.testimonial-section .testi-item {
  padding: 30px;
  text-align: center;
  position: relative;
}

.testimonial-section .testi-item i {
  position: absolute;
  font-size: 30px;
  color: var(--text-black-600);
  opacity: 0.1;
}

.testimonial-section .testi-item i.left {
  left: 5px;
  top: 5px;
}

.testimonial-section .testi-item i.right {
  right: 5px;
  bottom: 5px;
}

.testimonial-section .testi-item p {
  padding: 10px;
  font-size: 16px;
  line-height: 26px;
  color: var(--text-black-600);
  margin: 0 0 10px;
}

.testimonial-section .testi-item img {
  max-width: 70px;
  display: inline-block;
  width: 100%;
}

.testimonial-section .testi-item span {
  display: block;
  margin: 10px 0 0;
  font-weight: 600;
  font-size: 16px;
  color: var(--text-black-700);
  text-transform: capitalize;
}

.testimonial-section .testi-slider-nav {
  margin-top: 30px;
  text-align: center;
}

.testimonial-section .testi-slider-nav span {
  height: 40px;
  width: 40px;
  color: var(--skin-color);
  display: inline-block;
  font-size: 20px;
  cursor: pointer;
  transition: all 0.3s ease;
  border-radius: 50%;
  margin: 0 4px;
}

.testimonial-section .testi-slider-nav span:after {
  border-radius: 50%;
}

.testimonial-section .testi-slider-nav span i {
  line-height: 40px;
}

/* ================ 
SECCIÓN CONTACTO
================ */
.contact-section {
  padding: 125px 0px 0px 0px;
  min-height: 100vh;
}

.contact-section .contact-item {
  flex: 0 0 33.33%;
  max-width: 33.33%;
  padding: 15px;
  display: flex;
}

.contact-section .contact-item-inner {
  padding: 30px 15px;
  text-align: center;
  border-radius: 5px;
  width: 100%;
}

.contact-section .contact-item i {
  font-size: 25px;
  color: var(--skin-color);
}

.contact-section .contact-item span {
  display: block;
  font-size: 16px;
  font-weight: 700;
  color: var(--text-black-700);
  margin: 15px 0 10px;
  text-transform: capitalize;
  font-family: 'Blinker', sans-serif;
}

.contact-section .contact-item-inner p {
  font-size: 16px;
  color: var(--text-black-600);
  line-height: 26px;
  margin: 0;
  word-break: break-word;
  font-family: 'Scope One', serif;
}

.contact-section .contact-form {
  flex: 0 0 100%;
  max-width: 100%;
  margin-top: 50px;
}

.contact-section .w-50 {
  padding: 0 15px;
  flex: 0 0 50%;
  max-width: 50%;
}

.contact-section .input-group {
  margin: 0 0 25px;
  transition: all 0.3s ease;
  border-radius: 5px;
}

.contact-section .input-group:after {
  border-radius: 5px;
}

.contact-section .input-group .input-control {
  height: 45px;
  display: block;
  width: 100%;
  border-radius: 5px;
  border: none;
  background-color: transparent;
  font-size: 16px;
  padding: 0 15px;
  color: var(--text-black-700);
  font-family: 'Scope One', serif;
}

.contact-section .input-group textarea.input-control {
  height: 184px;
  padding-top: 15px;
  resize: none;
}

.contact-section .submit-btn {
  flex: 0 0 100%;
  max-width: 100%;
  text-align: right;
  padding: 0 15px;
}

/*==  FOOTER ==*/
.footer {
  height: 100px;
  margin-top: 50px;
  margin-bottom: 0px;
  display: flex;
  justify-content: center;
}

.footer__text {
  width: 1140px;
  text-align: center;
  border-top: 1px solid var(--bg-black-800);
  padding-top: 20px;
  position: relative;
  top: -25px;
  color: var(--bg-black-800);
  font-family: 'Blinker', sans-serif;

}
/* ================ 
VENTANA MODAL (MENSAJE VALIDACIÓN)
================ */
.modal {
  position: fixed;
  z-index: 999;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--black-alpha-color);
  opacity: 0;
  pointer-events: none;
  transition: all 1s;
  margin: 0 auto;
}

.contact-form {
  margin: 2rem auto;
  padding: 1rem;
  max-width: 800px;
}
/* ... */

